fixed spacing weather card

--- a/src/components/Weather/Weather.css
+++ b/src/components/Weather/Weather.css
@@ -21,7 +21,7 @@
 }
 
 .country-flag {
-    height: 1rem; 
+    height: 1rem;
     margin-left: 0.3rem;
 }
 
@@ -52,7 +52,7 @@
     background-color: rgba(14, 15, 16, 0.93);
     color: #fff;
     margin-right: -15px;
-    margin-left: -36rem;
+    margin-left: -30rem;
     top: 0;
 }
 
